# plcord

./: .gitignore  Changelog.md  LICENSE  README.md  pyproject.toml
example/: basic_bot.py  embeds_example.py  load_cogs.py
example/Json Parser/: json_module.py  test.json
example/ext/: database_module.py
example/full_example/: main.py
example/full_example/cogs/: test.py
example/views/: ModelIo_example.py
src/dinocord/: __init__.py  bot.py
src/dinocord/ext/: __init__.py  database.py  json.py
src/dinocord/modules/: colors.py  emb.py  modal_io.py
src/dinocord/utils/: log.py  times.py  ver_check.py
src/mikocord/: bot.py
src/mikocord/ext/: database.py
src/picord/ext/: json.py
src/picord/modules/: emb.py
src/picord/utils/: ver_check.py
src/plcord/: __init__.py  bot.py
src/plcord/modules/: emb.py
src/plcord/utils/: log.py  ver_check.py
